# scRNAseq

./: .gitignore  .~lock.results_file_lr_raw_smote.csv#  .~lock.results_file_lr_smote.csv#  README.md  gene_cell.py  gene_cell_down_sam.py  gene_cell_log_norm.py  gene_cell_split.py  nn_model_temp.py
data/: README.md
scbert/: besteffort_finetuning.py  besteffort_finetuning.sh  embeddings.py  finetune.py  finetune_freeze.py  finetune_nobp.py  inference.py  inference_embeddings.npy  label  label.pkl  label_dict.pkl  not_lisnode3.sh  only_classifer.sh  perfomer_embeddings.npy  performer_learned_representations.pt  predict.py  pyproject.toml  requirements.txt  run_emb.sh  run_finetune.sh  run_ft.sh  run_inference.sh  run_inference_train.sh  run_nobp_finetune.sh  run_testing.sh  scBERT_nobp_finetune_161149_1.err  scBERT_nobp_finetune_161150_1.err  scBERT_nobp_finetune_161293_1.err  testing.py  train_inference.py  utils.py
scbert/archive/: data.pkl
scbert/ckpts/: label.pkl
scbert/results/: besteffort_finetune_161471_4294967294.err  besteffort_finetune_161472_4294967294.err  besteffort_finetune_161472_4294967294.out  besteffort_finetune_161475_4294967294.err  besteffort_finetune_161476_4294967294.err  besteffort_finetune_161476_4294967294.out  besteffort_finetune_161477_4294967294.err  besteffort_finetune_161478_4294967294.err  besteffort_finetune_161478_4294967294.out  besteffort_finetune_161480_4294967294.err  besteffort_finetune_161481_4294967294.err  besteffort_finetune_161524_4294967294.err  besteffort_finetune_161524_4294967294.out  besteffort_finetune_161529_4294967294.err  besteffort_finetune_161539_4294967294.err  besteffort_finetune_161539_4294967294.out  (+30 more)
(+310 files in other folders)
