[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Amrithya <amrithyarao1999@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10"
matplotlib = "^3.10.1"
scanpy = "^1.11.1"
numpy = "^2.2.5"
xgboost = "^3.0.0"
imbalanced-learn = "^0.13.0"
transformers = "^4.51.3"
einops = "^0.8.1"
local-attention = "^1.11.1"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
